# cannet

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  frontend-report-dev.json  package-lock.json  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json
app/src/: App.tsx  format.ts  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  wire.rs
apps/gui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/gui/src-tauri/: Cargo.toml  THIRD-PARTY-LICENSES  build.rs  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: crash.rs  dbc_watcher.rs  diag.rs  filter.rs  interfaces.rs  ipc.rs  lib.rs  licenses.rs  local_buses.rs  main.rs  notes.rs  prefs.rs  project.rs  rbs.rs  settings.rs  sidecar.rs  signal_cache.rs  signal_sampler.rs  signal_snapshot.rs  state.rs  system_log.rs  trace_store.rs  transmit_frames.rs  transmit_scheduler.rs  verification.rs  window_state.rs
crates/blf-source/: Cargo.toml
crates/can-core/: Cargo.toml
crates/cannet-blf/: Cargo.toml
crates/cannet-blf/src/: lib.rs
crates/cannet-blf/src/format/: can.rs  diagnostics.rs  header.rs  log_container.rs  marker.rs  mod.rs  object.rs  reader.rs  text.rs  writer.rs
crates/cannet-blf/tests/: oracle.rs
crates/cannet-blf/tests/oracle/: harness.cpp
crates/cannet-client/: Cargo.toml
crates/cannet-client/src/: lib.rs
crates/cannet-client/tests/: end_to_end.rs
crates/cannet-core/: Cargo.toml
crates/cannet-dbc/: Cargo.toml
crates/cannet-perf-measurement/: Cargo.toml  README.md
crates/cannet-perf-measurement/src/: check.rs  filter_bench.rs  frontend.rs  grpc.rs  hardware_peak.rs  lib.rs  main.rs  runner.rs  sidecar.rs  signal_bench.rs  tracebuffer.rs  workload.rs
crates/cannet-perf-measurement/tests/: example_artifacts.rs  fps_flat.rs
crates/cannet-server/: Cargo.toml
crates/cannet-server/src/: bridge_client.rs  lib.rs  loopback.rs  main.rs  replay.rs  server.rs  virtual_bus.rs
crates/cannet-server/tests/: end_to_end.rs  loopback.rs  virtual_bus.rs
crates/cannet-spill/: Cargo.toml
crates/cannet-spill/src/: byid.rs  disk.rs  filter_index.rs  lib.rs  mem.rs  record.rs  sample_seq.rs  seg.rs
crates/cannet-wire/: Cargo.toml  build.rs
crates/cannet-wire/proto/: cannet.proto
crates/cannet-wire/src/: batch.rs  convert.rs  lib.rs
crates/cannet-wire/tests/: round_trip.rs
docs/: ADR_REWORK.md  CONTEXT.md  blf-feature-support.md
docs/adr/: 0001-indefinite-length-capture.md  0002-disk-spill-store.md  0003-tauri-shell-react-frontend.md  0004-grpc-wire-protocol.md  0005-dockview-panel-layout.md  0006-xyflow-project-graph.md  0007-uplot-plot-renderer.md  0008-python-can-sidecar.md  0009-dbc-blf-readers.md  0010-no-sidecar-files.md  0011-project-file-format.md  0012-project-panel-graph-split.md  0013-default-receive-all-edge-edits-transmit-by-bus.md  0014-host-system-log.md  0015-fetched-runtime-binaries.md  0016-filter-predicates-structured-json.md  0016-interface-discovery-pull-and-watch.md  0017-transmit-signal-encoder-and-bytes-source-of-truth.md  0018-command-keybinding-framework.md  0019-project-element-display-names.md  0020-filter-defined-plot-areas.md  0021-virtual-bus-server.md  0022-hardware-server-model.md  0023-logical-bus-vs-interface.md  0024-trace-like-view-timing.md  0025-frontend-windowed-source-contract.md  0026-plot-areas-compose-axes-configure.md  0027-calculated-fields-counter-crc.md  0028-rest-of-bus-simulation.md  0029-signal-value-color-maps.md  0030-project-relative-file-references.md  0031-gui-performance-automation-self-driving.md  0032-machine-local-ui-state-host-side.md  0033-model-layer-build-order.md  0034-settings-vs-state-and-custom-settings-panel.md  0035-timeline-event-model.md  0036-frozen-python-can-sidecar.md  0037-commands-are-the-single-action-model.md  0038-canonical-signal-path.md
docs/performance-measurements/: 2026-06-22-d00a005-dirty.json  2026-06-26-e1b575d-dirty.json  2026-06-26-ee915d9-dirty.json  2026-07-01-f89842e-dirty.json  2026-07-12-8e9bb24-dirty.json  baseline.json
examples/: README.md  cannet-demo.blf  cannet-demo.dbc  generate_blf.py
examples/ev-demo/: README.md  ev-demo.cannet_prj  ev-demo.cannet_rbs
examples/ev-fleet/: README.md  ev-fleet.cannet  ev-fleet.cannet_rbs
examples/ev-zonal/: README.md  ev-zonal.cannet_prj  ev-zonal.cannet_rbs  generate_dbcs.py
plans/: adr-0024-implementation.md  backlog.md  can-spec-generation.md  features.md  phased-implementation.md  plot-panel-reference.html  project-panel-design.md  technology-inventory.md  ui-architecture-backlog.md  windowed-model-convergence.md
plans/adr/: 0001-indefinite-length-capture.md  0002-disk-spill-store.md
plans/tasks/: 0014-rest-of-bus-simulation-crc-sequence.md  0015-plot-refinements.md  0016-command-hotkey-framework.md  0017-windowed-model-convergence.md  0018-indefinite-length-capture-disk-spill.md  0019-command-palette-goto.md  0020-signal-view-panel.md  0020-signals-drag-drop-trace-signal-display.md  0021-performance-profiling-baseline.md  0022-canopen.md  0023-plot-measurements-and-triggers.md  (+15 more)
scripts/: build-sidecar.py  build-vector-blf-oracle.sh  check_local_paths.py  fetch-uv.sh  gen-licenses.py  relativize_project_paths.py
servers/cannet-python-can/: LICENSING.md  README.md  SMOKE.md  pyinstaller_entry.py  pyproject.toml  scratch_pcan_timestamps.py
servers/cannet-python-can/cannet_python_can/: __init__.py  __main__.py  driver.py  driver_python_can.py  server.py
servers/cannet-python-can/cannet_python_can/_proto/: cannet_pb2.py  cannet_pb2_grpc.py
servers/cannet-python-can/scripts/: regen_proto.sh
servers/cannet-python-can/tests/: test_bind.py  test_channel_send_validation.py  test_enumeration.py  test_msg_to_frame_timestamp.py  test_pump_batching.py  test_shared_interface.py  test_smoke.py  test_stdin_shutdown.py  test_watch_interfaces.py  test_wire_timestamp_clock.py
(+206 files in other folders)
