[workspace]
resolver = "2"
members = ["crates/cannet-core", "crates/cannet-blf", "crates/cannet-dbc", "crates/cannet-wire", "crates/cannet-server", "apps/gui/src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
