[package]
name = "cannet-client"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cannet-core = { path = "../cannet-core" }
cannet-wire = { path = "../cannet-wire" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = "0.1"
tonic = "0.12"

[dev-dependencies]
blf_asc = "0.2"
cannet-server = { path = "../cannet-server" }
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
