[project]
name = "cannet-python-can"
version = "0.1.0"
description = "Auto-launched python-can sidecar exposing Vector, Kvaser, and PEAK hardware over the cannet wire protocol."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }

# Hard runtime deps. `python-can` covers the three Phase-8 vendors
# (Vector / Kvaser / PEAK) via its built-in backends. `grpcio` /
# `protobuf` let the sidecar speak the same `.proto` as `cannet-server`
# and `cannet-client`.
#
# `python-can` is deliberately handled as an optional import inside
# `driver_python_can.py` (the sidecar must boot and report "0
# interfaces" even when it's missing); declaring it here lets `uv sync`
# install it as part of the default flow.
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25,<6",
    "python-can>=4.3",
]

[project.optional-dependencies]
# Pulled in by `uv sync --extra dev` for regenerating proto stubs and
# running tests. Kept out of the default install so the runtime venv
# stays small.
dev = [
    "grpcio-tools>=1.60",
    "pytest>=8",
]

[project.scripts]
cannet-python-can = "cannet_python_can.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cannet_python_can"]
