[project]
name = "cannet-python-can"
version = "0.1.0"
description = "Auto-launched python-can sidecar exposing Vector, Kvaser, and PEAK hardware over the cannet wire protocol."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT OR Apache-2.0" }

# Hard runtime deps. `python-can` covers the three Phase-8 vendors
# (Vector / Kvaser / PEAK) via its built-in backends. `grpcio` /
# `protobuf` let the sidecar speak the same `.proto` as `cannet-server`
# and `cannet-client`.
#
# `python-can` is deliberately handled as an optional import inside
# `driver_python_can.py` (the sidecar must boot and report "0
# interfaces" even when it's missing); declaring it here lets `uv sync`
# install it as part of the default flow.
#
# protobuf 6.x and grpcio 1.80+ are the floor — earlier protobuf can't
# load gencode emitted by current `grpc_tools.protoc`, and the gencode
# is checked into `cannet_python_can/_proto/` so the runtime must keep
# up. `uptime` is python-can's optional dep for Epoch-UTC timestamps
# on PEAK (and elsewhere); without it python-can falls back to
# boot-relative timestamps and warns. No upper bounds: we want
# `uv lock --upgrade` to pull current wheels and re-run smoke on bump.
dependencies = [
    "grpcio>=1.80",
    "protobuf>=6",
    "python-can>=4.6",
    "uptime>=3",
]

[project.optional-dependencies]
# Pulled in by `uv sync --extra dev` for regenerating proto stubs and
# running tests. Kept out of the default install so the runtime venv
# stays small.
dev = [
    "grpcio-tools>=1.80",
    "pytest>=9",
]

[project.scripts]
cannet-python-can = "cannet_python_can.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cannet_python_can"]
