[package]
name = "cannet-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "cannet_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cannet-core = { path = "../../../crates/cannet-core" }
cannet-blf = { path = "../../../crates/cannet-blf" }
cannet-client = { path = "../../../crates/cannet-client" }
cannet-dbc = { path = "../../../crates/cannet-dbc" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[features]
# `pnpm tauri build` enables `custom-protocol` for production bundles,
# which has Tauri embed the built frontend into the binary. Plain
# `cargo build` leaves it off so the Rust host can compile without
# the frontend having been built yet.
custom-protocol = ["tauri/custom-protocol"]
