[package]
name = "cannet-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "cannet_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Stamps the binary with `git describe --tags` at build time so a
# packaged build reports the exact tag/commit it was cut from. The
# committed crate/config version stays 0.0.0; the real version is
# generated here (and, for the installer, injected from the release tag
# in CI). `gitcl` shells out to the `git` already required to build.
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filter-predicate `name_regex` evaluation; small surface, transitively
# present already via several Phase 1-5 crates.
regex = "1"

cannet-core = { path = "../../../crates/cannet-core" }
cannet-blf = { path = "../../../crates/cannet-blf" }
cannet-client = { path = "../../../crates/cannet-client" }
cannet-dbc = { path = "../../../crates/cannet-dbc" }
# Phase 7: bridge wire-level LogMessage envelopes into the local bus.
cannet-wire = { path = "../../../crates/cannet-wire" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
# Phase 7 structured logging: `tracing` macros at every call site,
# `tracing-subscriber` to fan to dev stderr in parallel with the
# in-process ring the System Messages panel renders.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }
# Phase 12: filesystem watcher for loaded DBC files — auto-reload on
# change so the GUI stays current with an editor saving the file
# next door. Default backend wraps the OS-native APIs (FSEvents,
# inotify, ReadDirectoryChangesW).
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
# Process memory + process-tree enumeration for the on-disk health
# recorder (`crash.rs`): sums RSS over our process and its descendants
# so the WebView's separate processes (WebView2 on Windows, WebKitGTK on
# Linux) are accounted for, not just the Rust host. The workspace forbids
# `unsafe`, so a crate is required to wrap the per-OS process APIs. Only
# the process module is needed.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
# ISO-8601 / RFC-3339 timestamps in the on-disk crash log (`crash.rs`).
# Already in the dependency graph transitively; this just makes the
# dependency direct. `std` (not `clock`) is all we need to format an
# epoch-ms value — we don't read the wall clock through chrono.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
# Phase 9: round-trip the Save Capture writer through real files
# under a per-test tempdir.
tempfile = "3"

[features]
# `pnpm tauri build` enables `custom-protocol` for production bundles,
# which has Tauri embed the built frontend into the binary. Plain
# `cargo build` leaves it off so the Rust host can compile without
# the frontend having been built yet.
custom-protocol = ["tauri/custom-protocol"]
